# Django_app

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
my_site/: devices.csv  devices_2.csv  log.txt  shop_app-products-fixtures.json  shop_app-products-fixtures.xml
my_site/blogapp/: admin.py  apps.py  models.py  urls.py  views.py
my_site/blogapp/migrations/: 0001_initial.py
my_site/blogapp/templates/blogapp/: article_detail.html  article_list.html  basa.html
my_site/locale/en/LC_MESSAGES/: django.po
my_site/locale/ru/LC_MESSAGES/: django.po
my_site/my_api_app/: apps.py  serializers.py  urls.py  views.py
my_site/my_auth/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
my_site/my_auth/management/commands/: bind_user.py
my_site/my_auth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_options_alter_profile_avatar_and_more.py
my_site/my_auth/templates/my_auth/: about_me.html  login.html  register.html  user_detail.html  user_list.html  (+1 more)
my_site/my_site/: settings.py  sitemaps.py  urls.py
my_site/requestdataapp/: apps.py  forms.py  middlewares.py  urls.py  views.py
my_site/shop_app/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
my_site/shop_app/fixtures/: orders-fixtures.json  products-fixtures.json  user-fixtures.json
my_site/shop_app/migrations/: 0001_initial.py  0002_order_receipt_product_preview_productimage.py  0003_alter_order_options_alter_product_options_and_more.py
my_site/sitemap/: apps.py  urls.py  views.py
(+27 files in other folders)
