[tool.poetry]
name = "django-app"
version = "0.1.0"
description = ""
authors = ["Антон Соловцов <antoha-obshaga@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.0"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.2.0"
django-extensions = "^3.2.3"
django-filter = "^23.4"
drf-spectacular = "^0.26.5"
gunicorn = "^21.2.0"
inflection = "^0.5.1"
jsonschema = "^4.20.0"
jsonschema-specifications = "^2023.11.2"
packaging = "^23.2"
pillow = "^10.1.0"
pytz = "^2023.3.post1"
pyyaml = "^6.0.1"
referencing = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
